--- a/heejoo.html
+++ b/heejoo.html
@@ -7,10 +7,7 @@
 
         <link rel="stylesheet" href="./css/reset.css" />
         <link rel="stylesheet" href="./css/common.css" />
-        <!-- <link rel="stylesheet" href="./css/hell-common.css" /> -->
-        <link rel="stylesheet" href="./css/heaven-common.css" />
-        <!-- <link rel="stylesheet" href="./css/hell-heejoo.css" /> -->
-        <link rel="stylesheet" href="./css/heaven-heejoo.css" />
+        <link rel="stylesheet" href="./css/heejoo.css" />
 
         <script src="./js/jquery-3.7.1.min.js"></script>
         <!-- matter.js -->
@@ -18,12 +15,13 @@
         <!-- GSAP -->
         <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.7/dist/gsap.min.js"></script>
 
-        <!-- <script src="./js/megaMenu.js"></script> -->
-        <!-- <script src="./js/hell-heejoo.js"></script> -->
+        <script src="./js/megaMenu.js"></script>
+        <script src="./js/hell-heejoo.js"></script>
+        <script src="./js/toggle.js"></script>
     </head>
-    <body>
+    <body class="hell">
         <!-- MEGA menu -->
-        <div class="mega-menu hell">
+        <div class="mega-menu hell-only">
             <div id="canvas-container"></div>
             <div class="text-container">
                 <div class="text-element logo">
@@ -62,24 +60,24 @@
             </div>
         </div>
         <!-- e: MEGA menu -->
-        <header>
+        <header class="hell">
             <nav>
                 <h1 class="logo">
                     <a href="./index.html"><img src="" alt="희주의 포트폴리오" /></a>
                 </h1>
-                <ul class="gnb heaven">
+                <ul class="gnb heaven-only">
                     <li><a href="./index.html">HOME</a></li>
                     <li class="active"><a href="./heejoo.html">HEEJOO</a></li>
                     <li><a href="./projects.html">PROJECT</a></li>
                     <li><a href="./contact.html">CONTACT</a></li>
                 </ul>
-                <button type="button" class="btn-menu hell"></button>
+                <button type="button" class="btn-menu hell-only"></button>
             </nav>
         </header>
         <!-- e: header -->
 
-        <main>
-            <div class="hell">
+        <main class="hell">
+            <div class="hell-only">
                 <h2 class="active">정희주</h2>
                 <ul class="info-list">
                     <li class="info about">ABOUT.</li>
@@ -186,162 +184,160 @@
                         </ul>
                     </div>
                     <div class="popup skills">
-                        <img src="" alt="figma" />
-                        <img src="" alt="HTML" />
-                        <img src="" alt="CSS" />
-                        <img src="" alt="JavaScript" />
-                        <img src="" alt="JQuery" />
-                        <img src="" alt="Photoshop" />
-                        <img src="" alt="Illustrator" />
-                        <img src="" alt="Indesign" />
+                        <img src="./img/icon-skills-html.jpg" alt="HTML" />
+                        <img src="./img/icon-skills-css.jpg" alt="CSS" />
+                        <img src="./img/icon-skills-js.jpg" alt="JavaScript" />
+                        <img src="./img/icon-skills-jquery.jpg" alt="JQuery" />
+                        <img src="./img/icon-skills-figma.jpg" alt="figma" />
+                        <img src="./img/icon-skills-photoshop.jpg" alt="Photoshop" />
+                        <img src="./img/icon-skills-illustrator.jpg" alt="Illustrator" />
+                        <img src="./img/icon-skills-indesign.jpg" alt="Indesign" />
                     </div>
                 </div>
             </div>
 
-            <div class="heaven sec-list">
-                <section class="list1">
-                    <div class="name">
-                        <strong>JUNG HEEJOO</strong>
-                        <h2>정희주</h2>
-                    </div>
-                    <div class="address">
-                        <p>1997. 09. 04</p>
-                        <p>서울시 서대문구</p>
-                    </div>
-                    <figure><img src="" alt="희주의 몽타주입니다." /></figure>
-                    <ul class="strength">
-                        <li>외향적</li>
-                        <li>사회성</li>
-                        <li>근성</li>
-                    </ul>
-                </section>
-
-                <section class="list2">
-                    <div class="education">
-                        <h3>EDUCATION.</h3>
-                        <ul class="list-block">
-                            <li>
-                                <strong>2016</strong>
-                                <dl>
-                                    <dt>선정고등학교</dt>
-                                    <dd>
-                                        <p>과학중점반</p>
-                                        <p>미술거점반</p>
-                                    </dd>
-                                </dl>
-                            </li>
-                            <li>
-                                <strong>2019</strong>
-                                <dl>
-                                    <dt>단국대학교</dt>
-                                    <dd>
-                                        <p>커뮤니케이션디자인과</p>
-                                        <p>수석입학</p>
-                                        <p>중퇴</p>
-                                    </dd>
-                                </dl>
-                            </li>
-                            <li>
-                                <strong>2025</strong>
-                                <dl>
-                                    <dt>하이미디어</dt>
-                                    <dd>
-                                        <p>UI/UX 반응형 웹디자인/웹퍼블리싱 과정</p>
-                                        <p>수료</p>
-                                    </dd>
-                                </dl>
-                            </li>
-                        </ul>
-                    </div>
-
-                    <div class="experience">
-                        <h3>EXPERIENCE.</h3>
-                        <ul class="list-block">
-                            <li>
-                                <strong>
-                                    2020. 08 - <br />
-                                    2021. 04
-                                </strong>
-                                <dl>
-                                    <dt>닥터로빈 AK홍대점</dt>
-                                    <dd>
-                                        <p>서버</p>
-                                        <p>정직원</p>
-                                    </dd>
-                                    <dd>
-                                        <p>음료제조</p>
-                                        <p>고객응대</p>
-                                        <p>재고관리</p>
-                                    </dd>
-                                </dl>
-                            </li>
-                            <li>
-                                <strong>
-                                    2022. 02 - <br />
-                                    2024. 05
-                                </strong>
-                                <dl>
-                                    <dt>뷰맵 연남스토어</dt>
-                                    <dd>
-                                        <p>판매</p>
-                                        <p>매니저</p>
-                                    </dd>
-                                    <dd>
-                                        <p>외국어응대</p>
-                                        <p>인력/매출관리</p>
-                                        <p>SNS관리</p>
-                                    </dd>
-                                </dl>
-                            </li>
-                        </ul>
-                    </div>
-                </section>
-
-                <section class="list3">
-                    <div class="license">
-                        <h3>LICENSE.</h3>
-                        <ul class="list-block">
-                            <li>
-                                <strong>2022. 11</strong>
-                                <p>GTQ 1급</p>
-                            </li>
-                            <li>
-                                <strong>2023. 01</strong>
-                                <p>GTQi 1급</p>
-                            </li>
-                            <li>
-                                <strong>2023. 06</strong>
-                                <p>GTQid 1급</p>
-                            </li>
-                            <li>
-                                <strong>2024. 07</strong>
-                                <p>컴퓨터활용능력 1급</p>
-                            </li>
-                            <li>
-                                <strong>2024.09</strong>
-                                <p>TOEIC 825점</p>
-                            </li>
-                        </ul>
-                    </div>
-
-                    <div class="skills">
-                        <h3>SKILLS.</h3>
-                        <div class="icons">
-                            <img src="" alt="HTML" />
-                            <img src="" alt="CSS" />
-                            <img src="" alt="JavaScript" />
-                            <img src="" alt="JQuery" />
-                            <img src="" alt="fimga" />
-                            <img src="" alt="Photoshop" />
-                            <img src="" alt="Illustrator" />
-                            <img src="" alt="Indesign" />
+            <div class="heaven-only">
+                <div class="sec-list">
+                    <section class="list1">
+                        <div class="name">
+                            <strong>JUNG HEEJOO</strong>
+                            <h2>정희주</h2>
                         </div>
-                    </div>
-                </section>
+                        <div class="address">
+                            <p>1997. 09. 04</p>
+                            <p>서울시 서대문구</p>
+                        </div>
+                        <figure><img src="" alt="희주의 몽타주입니다." /></figure>
+                        <ul class="strength">
+                            <li>외향적</li>
+                            <li>사회성</li>
+                            <li>근성</li>
+                        </ul>
+                    </section>
+                    <section class="list2">
+                        <div class="education">
+                            <h3>EDUCATION.</h3>
+                            <ul class="list-block">
+                                <li>
+                                    <strong>2016</strong>
+                                    <dl>
+                                        <dt>선정고등학교</dt>
+                                        <dd>
+                                            <p>과학중점반</p>
+                                            <p>미술거점반</p>
+                                        </dd>
+                                    </dl>
+                                </li>
+                                <li>
+                                    <strong>2019</strong>
+                                    <dl>
+                                        <dt>단국대학교</dt>
+                                        <dd>
+                                            <p>커뮤니케이션디자인과</p>
+                                            <p>수석입학</p>
+                                            <p>중퇴</p>
+                                        </dd>
+                                    </dl>
+                                </li>
+                                <li>
+                                    <strong>2025</strong>
+                                    <dl>
+                                        <dt>하이미디어</dt>
+                                        <dd>
+                                            <p>UI/UX 반응형 웹디자인/웹퍼블리싱 과정</p>
+                                            <p>수료</p>
+                                        </dd>
+                                    </dl>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="experience">
+                            <h3>EXPERIENCE.</h3>
+                            <ul class="list-block">
+                                <li>
+                                    <strong>
+                                        2020. 08 - <br />
+                                        2021. 04
+                                    </strong>
+                                    <dl>
+                                        <dt>닥터로빈 AK홍대점</dt>
+                                        <dd>
+                                            <p>서버</p>
+                                            <p>정직원</p>
+                                        </dd>
+                                        <dd>
+                                            <p>음료제조</p>
+                                            <p>고객응대</p>
+                                            <p>재고관리</p>
+                                        </dd>
+                                    </dl>
+                                </li>
+                                <li>
+                                    <strong>
+                                        2022. 02 - <br />
+                                        2024. 05
+                                    </strong>
+                                    <dl>
+                                        <dt>뷰맵 연남스토어</dt>
+                                        <dd>
+                                            <p>판매</p>
+                                            <p>매니저</p>
+                                        </dd>
+                                        <dd>
+                                            <p>외국어응대</p>
+                                            <p>인력/매출관리</p>
+                                            <p>SNS관리</p>
+                                        </dd>
+                                    </dl>
+                                </li>
+                            </ul>
+                        </div>
+                    </section>
+                    <section class="list3">
+                        <div class="license">
+                            <h3>LICENSE.</h3>
+                            <ul class="list-block">
+                                <li>
+                                    <strong>2022. 11</strong>
+                                    <p>GTQ 1급</p>
+                                </li>
+                                <li>
+                                    <strong>2023. 01</strong>
+                                    <p>GTQi 1급</p>
+                                </li>
+                                <li>
+                                    <strong>2023. 06</strong>
+                                    <p>GTQid 1급</p>
+                                </li>
+                                <li>
+                                    <strong>2024. 07</strong>
+                                    <p>컴퓨터활용능력 1급</p>
+                                </li>
+                                <li>
+                                    <strong>2024.09</strong>
+                                    <p>TOEIC 825점</p>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="skills">
+                            <h3>SKILLS.</h3>
+                            <div class="icons">
+                                <img src="./img/icon-skills-html.jpg" alt="HTML" />
+                                <img src="./img/icon-skills-css.jpg" alt="CSS" />
+                                <img src="./img/icon-skills-js.jpg" alt="JavaScript" />
+                                <img src="./img/icon-skills-jquery.jpg" alt="JQuery" />
+                                <img src="./img/icon-skills-figma.jpg" alt="fimga" />
+                                <img src="./img/icon-skills-photoshop.jpg" alt="Photoshop" />
+                                <img src="./img/icon-skills-illustrator.jpg" alt="Illustrator" />
+                                <img src="./img/icon-skills-indesign.jpg" alt="Indesign" />
+                            </div>
+                        </div>
+                    </section>
+                </div>
             </div>
         </main>
 
-        <footer>
+        <footer class="hell">
             <div class="mode-wrap">
                 <input type="checkbox" id="mode" />
                 <label for="mode"><span>HEAVEN</span><span>HELL</span></label>
