hell index animation done

--- a/index.html
+++ b/index.html
@@ -24,6 +24,19 @@
     <body class="hell">
         <!-- MEGA menu -->
         <div class="mega-menu hell-only">
+            <div class="caution">
+                <dl>
+                    <dt>위험!</dt>
+                    <dd>DANGER!</dd>
+                </dl>
+                <dl>
+                    <dt>낙하물주의</dt>
+                    <dd>
+                        <p>CAUTION FALLING OBJECTS</p>
+                        <p>메뉴가 보이는 것보다 미끄럽습니다</p>
+                    </dd>
+                </dl>
+            </div>
             <div id="canvas-container"></div>
             <div class="text-container">
                 <div class="text-element logo">
