--- a/projects.html
+++ b/projects.html
@@ -29,6 +29,19 @@
     <body class="hell">
         <!-- MEGA menu -->
         <div class="mega-menu hell-only">
+            <div class="caution">
+                <dl>
+                    <dt>위험!</dt>
+                    <dd>DANGER!</dd>
+                </dl>
+                <dl>
+                    <dt>낙하물주의</dt>
+                    <dd>
+                        <p>CAUTION FALLING OBJECTS</p>
+                        <p>메뉴가 보이는 것보다 미끄럽습니다</p>
+                    </dd>
+                </dl>
+            </div>
             <div id="canvas-container"></div>
             <div class="text-container">
                 <div class="text-element logo">
@@ -638,11 +651,11 @@
                                         <img src="./img/banner_홈장마차1887_1140.jpg" alt="배너-홈장마차1" />
                                     </figure>
                                     <figure><img src="./img/banner-chrome3D.png" alt="그래픽-크롬3D" /></figure>
-                                    <figure></figure>
-                                    <figure></figure>
-                                    <figure></figure>
-                                    <figure></figure>
-                                    <figure></figure>
+                                    <figure><p>COMING SOON</p></figure>
+                                    <figure><p>COMING SOON</p></figure>
+                                    <figure><p>COMING SOON</p></figure>
+                                    <figure><p>COMING SOON</p></figure>
+                                    <figure><p>COMING SOON</p></figure>
                                 </div>
                             </div>
                         </div>
