--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div id="canvas-container"></div>
             <div class="text-container">
                 <div class="text-element logo">
-                    <a href="./index.html"><img src="" alt="희주의 포트폴리오" /></a>
+                    <a href="./index.html"><img src="./img/logo.svg" alt="희주의 포트폴리오" /></a>
                 </div>
                 <div class="text-element btn-close">
                     <button type="button" id="btn-close"></button>
@@ -78,7 +78,7 @@
         <header class="hell">
             <nav>
                 <h1 class="logo">
-                    <a href="./index.html"><img src="" alt="희주의 포트폴리오" /></a>
+                    <a href="./index.html"><img src="./img/logo.svg" alt="희주의 포트폴리오" /></a>
                 </h1>
                 <ul class="gnb heaven-only">
                     <li class="active"><a href="./index.html">HOME</a></li>
