favicon, og add

--- a/projects.html
+++ b/projects.html
@@ -5,6 +5,16 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>PORTFOLIO::HEEJOO✌</title>
 
+        <!-- favicon -->
+        <link rel="shortcut icon" href="./img/logo.svg" />
+        <link rel="icon" href="./img/logo.svg" />
+
+        <!-- open graph -->
+        <meta property="og:title" content="PORTFOLIO::HEEJOO✌" />
+        <meta property="og:image" content="./img/logo.svg" />
+        <meta property="og:url" content="https://hihappyjoo.github.io/portfolio/projects.html" />
+        <meta property="og:type" content="website" />
+
         <!-- swiper.js -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 
