--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,16 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>PORTFOLIO::HEEJOO✌</title>
 
+        <!-- favicon -->
+        <link rel="shortcut icon" href="./img/logo.svg" />
+        <link rel="icon" href="./img/logo.svg" />
+
+        <!-- open graph -->
+        <meta property="og:title" content="PORTFOLIO::HEEJOO✌" />
+        <meta property="og:image" content="./img/logo.svg" />
+        <meta property="og:url" content="https://hihappyjoo.github.io/portfolio/contact.html" />
+        <meta property="og:type" content="website" />
+
         <link rel="stylesheet" href="./css/reset.css" />
         <link rel="stylesheet" href="./css/common.css" />
         <link rel="stylesheet" href="./css/contact.css" />
