--- a/index.html
+++ b/index.html
@@ -3,7 +3,18 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
         <title>PORTFOLIO::HEEJOO✌</title>
+
+        <!-- favicon -->
+        <link rel="shortcut icon" href="./img/logo.svg" />
+        <link rel="icon" href="./img/logo.svg" />
+
+        <!-- open graph -->
+        <meta property="og:title" content="PORTFOLIO::HEEJOO✌" />
+        <meta property="og:image" content="./img/logo.svg" />
+        <meta property="og:url" content="https://hihappyjoo.github.io/portfolio/" />
+        <meta property="og:type" content="website" />
 
         <link rel="stylesheet" href="./css/reset.css" />
         <link rel="stylesheet" href="./css/common.css" />
