--- a/heejoo.html
+++ b/heejoo.html
@@ -12,6 +12,7 @@
         <!-- open graph -->
         <meta property="og:title" content="PORTFOLIO::HEEJOO✌" />
         <meta property="og:image" content="./img/logo.svg" />
+        <meta property="og:description" content="정희주 웹디자인/퍼블리싱 포트폴리오 사이트입니다." />
         <meta property="og:url" content="https://hihappyjoo.github.io/portfolio/heejoo.html" />
         <meta property="og:type" content="website" />
 
@@ -117,7 +118,9 @@
                         </div>
                         <div class="address"><p>서울시 서대문구</p></div>
                         <div class="birth"><p>1997. 09. 04</p></div>
-                        <div class="portrait"><img src="" alt="희주의 몽타주입니다." /></div>
+                        <div class="portrait">
+                            <figure><img src="./img/hell-portrait.jpg" alt="희주의 몽타주입니다." /></figure>
+                        </div>
                         <div class="strength1"><p>외향적</p></div>
                         <div class="strength2"><p>사회성</p></div>
                         <div class="strength3"><p>근성</p></div>
@@ -230,7 +233,7 @@
                             <p>1997. 09. 04</p>
                             <p>서울시 서대문구</p>
                         </div>
-                        <figure><img src="" alt="희주의 몽타주입니다." /></figure>
+                        <figure><img src="./img/heaven-portrait.jpg" alt="희주의 몽타주입니다." /></figure>
                         <ul class="strength">
                             <li>외향적</li>
                             <li>사회성</li>
