--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <!-- open graph -->
         <meta property="og:title" content="PORTFOLIO::HEEJOO✌" />
         <meta property="og:image" content="./img/logo.svg" />
+        <meta property="og:description" content="정희주 웹디자인/퍼블리싱 포트폴리오 사이트입니다." />
         <meta property="og:url" content="https://hihappyjoo.github.io/portfolio/" />
         <meta property="og:type" content="website" />
 
@@ -187,7 +188,7 @@
                     </section>
                     <section class="wandoo">
                         <h2>WANDOO</h2>
-                        <video src="" autoplay muted loop>고양이 완두에게 냥냥펀치를 맞아보세요</video>
+                        <figure><img src="./img/wandoo.gif" alt="고양이 완두에게 냥냥펀치를 맞아보세요" /></figure>
                     </section>
                 </div>
                 <div class="skill-marquee-wrap">
@@ -278,7 +279,7 @@
                     <section class="wandoo">
                         <h2>WANDOO</h2>
                         <div class="behind">
-                            <video src="" autoplay muted loop>고양이 완두에게 냥냥펀치를 맞아보세요</video>
+                            <figure><img src="./img/wandoo.gif" alt="고양이 완두에게 냥냥펀치를 맞아보세요" /></figure>
                         </div>
                     </section>
                 </div>
