--- a/projects.html
+++ b/projects.html
@@ -12,6 +12,7 @@
         <!-- open graph -->
         <meta property="og:title" content="PORTFOLIO::HEEJOO✌" />
         <meta property="og:image" content="./img/logo.svg" />
+        <meta property="og:description" content="정희주 웹디자인/퍼블리싱 포트폴리오 사이트입니다." />
         <meta property="og:url" content="https://hihappyjoo.github.io/portfolio/projects.html" />
         <meta property="og:type" content="website" />
 
