--- a/projects.html
+++ b/projects.html
@@ -270,10 +270,7 @@
                                             </dt>
                                             <dd>
                                                 <p>
-                                                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eum
-                                                    repellat eius omnis aspernatur quos quia ipsum eaque fugiat
-                                                    voluptatibus, dolore, fuga odio quisquam dolorum? Ab possimus modi
-                                                    accusamus necessitatibus numquam.
+                                                    한강 작가의 노벨문학상 수상 이후로 늘어난 독서인구! <br> 그 수요를 반영하여 독서가 잠깐의 흥미가 아닌 꾸준한 습관으로 남을 수 있도록, 독서기록 & 커뮤니티 독서앱 『토독』의 앱디자인과 프로토타이핑을 기획했습니다.
                                                 </p>
                                                 <i>#독서기록 #커뮤니티 #와이어프레임 #프로토타이핑</i>
                                             </dd>
@@ -302,8 +299,7 @@
                                             </dt>
                                             <dd>
                                                 <p>
-                                                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum
-                                                    porro, fugit magni minus esse quia.
+                                                    디즈니 픽사의 영화 애니메이션 『인사이드아웃2』, 특유의 색감에 집중하여 마이크로사이트를 제작했습니다.
                                                 </p>
                                                 <i>#영화 #프로모션 #밝은 #몽환적</i>
                                             </dd>
@@ -532,8 +528,7 @@
                                         <h4>토독</h4>
                                     </div>
                                     <p>
-                                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestiae ex non est
-                                        distinctio labore quidem itaque tenetur nulla? Perspiciatis, quos?
+                                        한강 작가의 노벨문학상 수상 이후로 늘어난 독서인구! <br> 그 수요를 반영하여 독서가 잠깐의 흥미가 아닌 꾸준한 습관으로 남을 수 있도록, 독서기록 & 커뮤니티 독서앱 『토독』의 앱디자인과 프로토타이핑을 기획했습니다.
                                     </p>
                                     <dl class="period">
                                         <dt>기간</dt>
@@ -568,9 +563,7 @@
                                 </div>
                                 <div class="popup">
                                     <p>
-                                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum porro, fugit
-                                        magni minus esse quia.Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                                        Laborum porro, fugit magni minus esse quia.
+                                        디즈니 픽사의 영화 애니메이션 『인사이드아웃2』, 특유의 색감에 집중하여 마이크로사이트를 제작했습니다.
                                     </p>
                                     <div class="buttons">
                                         <button type="button" class="btn-process" data-process="">PROCESS</button>
