process-mad updated

--- a/projects.html
+++ b/projects.html
@@ -156,7 +156,7 @@
                                 </li>
                                 <li
                                     data-img="./img/hell-web-mad.jpg"
-                                    data-process="https://i.pinimg.com/236x/f6/16/d0/f616d044c7937dde2e8ec2b4f3e6f79c.jpg"
+                                    data-process="./img/process-mad.jpg"
                                     data-link="https://hihappyjoo.github.io/madfotgarlic/"
                                 >
                                     <div class="project-date">
@@ -386,7 +386,7 @@
                                         <button
                                             type="button"
                                             class="btn-process"
-                                            data-process="https://i.pinimg.com/236x/f6/16/d0/f616d044c7937dde2e8ec2b4f3e6f79c.jpg"
+                                            data-process="./img/process-mad.jpg"
                                         >
                                             PROCESS
                                         </button>
@@ -874,7 +874,7 @@
             </div>
             <div class="update">
                 <strong>LAST UPDATED.</strong>
-                <p>2025. 04. 02</p>
+                <p>2025. 04. 08</p>
             </div>
         </footer>
 
