insideout process updated

--- a/projects.html
+++ b/projects.html
@@ -282,7 +282,7 @@
                         <section id="micro-site">
                             <h3>MICRO SITE</h3>
                             <ol>
-                                <li data-img="./img/hell-micro-inside.jpg" data-process="" data-link="https://hihappyjoo.github.io/insideout/" class="micros">
+                                <li data-img="./img/hell-micro-inside.jpg" data-process="./img/process-insideout.jpg" data-link="https://hihappyjoo.github.io/insideout/" class="micros">
                                     <div class="project-date">
                                         <p>
                                             2025. 01. 06 <br />
@@ -566,7 +566,7 @@
                                         디즈니 픽사의 영화 애니메이션 『인사이드아웃2』, 특유의 색감에 집중하여 마이크로사이트를 제작했습니다.
                                     </p>
                                     <div class="buttons">
-                                        <button type="button" class="btn-process" data-process="">PROCESS</button>
+                                        <button type="button" class="btn-process" data-process="./img/process-insideout.jpg">PROCESS</button>
                                         <a href="https://hihappyjoo.github.io/insideout/" target="_blank" class="link-website">MICROSITE</a>
                                     </div>
                                 </div>
