--- a/projects.html
+++ b/projects.html
@@ -129,7 +129,7 @@
                             <ol>
                                 <li
                                     data-img="./img/hell-web-paul.jpg"
-                                    data-process="./img/process-paul.jpg"
+                                    data-process="./img/process-paulbassett.jpg"
                                     data-link="https://www.figma.com/design/wYzd3f9Ki87m5FEpDZ9j0d/%ED%8F%B4%EB%B0%94%EC%85%8B_%EC%99%80%EC%9D%B4%EC%96%B4%ED%94%84%EB%A0%88%EC%9E%84?node-id=0-1&t=J1OZuIhSCbGtRcI9-1"
                                     class="figma"
                                 >
@@ -389,7 +389,11 @@
                                         </dl>
                                     </div>
                                     <div class="buttons">
-                                        <button type="button" class="btn-process" data-process="./img/process-paul.jpg">
+                                        <button
+                                            type="button"
+                                            class="btn-process"
+                                            data-process="./img/process-paulbassett.jpg"
+                                        >
                                             PROCESS
                                         </button>
                                         <a
