todok process updated

--- a/projects.html
+++ b/projects.html
@@ -274,7 +274,7 @@
                             <ol>
                                 <li
                                     data-img="./img/hell-app-todok.jpg"
-                                    data-process=""
+                                    data-process="./img/process-todok.jpg"
                                     data-link="https://www.figma.com/design/moNqpGOmnaIdmpwDb1YMPZ/%ED%86%A0%EB%8F%85-%EC%99%80%EC%9D%B4%EC%96%B4%ED%94%84%EB%A0%88%EC%9E%84?node-id=133-1056&t=KqziEGsEtDUiX0vS-1"
                                     class="figma"
                                 >
@@ -587,11 +587,7 @@
                                     </dl>
                                 </div>
                                 <div class="buttons">
-                                    <button
-                                        type="button"
-                                        class="btn-process"
-                                        data-process="https://dbdzm869oupei.cloudfront.net/img/sticker/preview/89685.png"
-                                    >
+                                    <button type="button" class="btn-process" data-process="./img/process-todok.jpg">
                                         PROCESS
                                     </button>
                                     <a
@@ -952,7 +948,7 @@
             </div>
             <div class="update">
                 <strong>LAST UPDATED.</strong>
-                <p>2025. 05. 23</p>
+                <p>2025. 06. 11</p>
             </div>
         </footer>
 
